--- a/style.css
+++ b/style.css
@@ -52,6 +52,7 @@ body {
   font-family: "Roboto", sans-serif;
   font-size: 16px;
   line-height: 1;
+  background-color: rgb(235, 229, 222);
 }
 
 /*# sourceMappingURL=style.css.map */
@@ -121,28 +122,128 @@ body {
 
 /* =========section 2=============== */
 .section-two{
-  padding-top: 30px;
+  padding-top: 50px;
 }
-.section-two_content{
-  display:flex;
-  justify-content: space-between;
+.section-two-content{
+  display: grid;
+  grid-template-columns: auto auto;
+  grid-gap: 30px;
+}
+.section-two-content_text h3{
+  margin-bottom: 20px;
+  font-family: "Montserrat", sans-serif;
+  font-style: italic;
+  font-weight: bold;
+  font-size: 40px;
+  line-height: 49px;
+}
+.section-two-content_text p{
+  font-family: "Montserrat", sans-serif;
+  font-style: italic;
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 35px;
+  text-align: justify;
+  color: #000000;
+}
+
+/* ==============SECTION 3============== */
+
+.section-three-menu{
+  display: flex;
+  justify-content: space-evenly;
   align-items: center;
+  margin:50px ;
 }
-.section-two_content_1{
-  display:flex;
-  justify-content: space-between;
-  align-items: center;
-  
+.section-three-menu_item{
+  color: #000;
+  text-decoration-line: underline;
+  font-family: "Roboto", sans-serif;
+  font-weight: 300;
+  font-size: 30px;
 }
-.section-two_content_2{
-  display:flex;
-  justify-content: space-between;
-  align-items: center;
-  
+/* ==================SECTION 4======================== */
+.section-four{
+  padding-top: 50px;
+  font-family: "Roboto", sans-serif;
 }
-.section-two_content_img{
-  flex: 1;
+.news-title{
+  text-align: center;
+  padding-bottom: 50px;
 }
-.section-two_content_text{
-  flex: 1;
+.news-title_item::after,
+.news-title_item::before{
+  content: "";
+  background-color: #000;
+  display: inline-block;
+  height: 2px;
+  vertical-align: middle;
+  width: 45%;
+  position: relative;
+  padding-left: 20px;
+}
+.news-main{
+  display: grid;
+  grid-template-columns:auto auto auto;
+  grid-gap: 40px;
+  padding-bottom: 50px;
+}
+.news-main_item{
+  background-color: #fff;
+  border-radius: 20px;
+  position: relative;
+  height: 550px;
+}
+.news-main_item_header{
+  text-align: center;
+  padding: 15px 0;
+}
+.news-main_item_image{
+  padding: 10px 0;
+  width: 100%;
+  max-height: 220px;
+}
+.news-main_item_title{
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.2;
+  padding: 10px 5px;
+
+}
+.news-main_item_date{
+  font-style: italic;
+  font-weight: 300;
+  font-size: 16px;
+  padding: 5px 5px;
+}
+.news-main_item_content{
+  padding: 5px 5px;
+  font-size: 18px;
+  line-height: 1.2;
+}
+.news-main_item_more{
+  position: absolute;
+  bottom: 3%;
+  right: 2%;
+}
+.news-links{
+  background-color: #fff;
+  border-radius: 20px;
+  padding: 20px;
+  position: relative;
+}
+.news-links ul{
+  list-style: disc;
+  padding-left: 15px;
+}
+.news-links ul li a{
+  color: #000;
+  line-height: 2;
+  font-weight: bold;
+  font-size: 20px;
+}
+.news-links_more{
+  position: absolute;
+  bottom: 3%;
+  right: 2%;
 }
