--- a/style.css
+++ b/style.css
@@ -164,6 +164,36 @@ body {
   text-align: justify;
   color: #000000;
 }
+.section-two-content_image{
+  position: relative;
+  width: 100%;
+  cursor: pointer;
+}
+.overlay {
+  position: absolute; 
+  bottom: 0; 
+  background: rgb(0, 0, 0);
+  background: rgba(0, 0, 0, 0.8); /* Black see-through */
+  color: #f1f1f1; 
+  width: 100%;
+  height: 100%;
+  transition: .5s ease;
+  opacity:0;
+  color: white;
+  border-radius: 10px;
+
+}
+.overlay h2{
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left:50%;
+  transform: translate(-50%, -50%);
+}
+.section-two-content_image:hover .overlay {
+  opacity: 1;
+}
+
 
 /* ==============SECTION 3============== */
 
@@ -179,6 +209,50 @@ body {
   font-family: "Roboto", sans-serif;
   font-weight: 300;
   font-size: 30px;
+}
+.section-three-slide{
+  position: relative;
+  margin: auto;
+}
+.mySlides {display: none}
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -22px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
 }
 /* ==================SECTION 4======================== */
 .section-four {
@@ -323,6 +397,10 @@ body {
 /* ===================SECTION 7================ */
 .section-7 {
   padding-top: 50px;
+}
+.section-slide{
+  position: relative;
+  margin: auto;
 }
 .section-main {
   background-color: #fff;
