--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ body {
   color: white;
 }
 .header-content_title h1{
-  width: 1100px;
+  width: 560px;
   font-size: 60px;
   font-family: "Montserrat", sans-serif;
   line-height: 1.5;
@@ -484,7 +484,7 @@ body {
 }
 .student-main_content {
   display: grid;
-  grid-template-columns: 1fr 2fr;
+  grid-template-columns: 1fr 2fr ;
   grid-gap: 20px;
   align-items: center;
   padding: 30px;
@@ -515,7 +515,7 @@ body {
 }
 .student-main_content_right {
   line-height: 2;
-  width: 800px;
+  max-width: 800px;
   background: #f0f4f6;
   padding: 10px 10px 10px 100px;
   border-top-right-radius: 20px;
@@ -636,3 +636,11 @@ body {
   font-weight: 500;
   font-size: 18px;
 }
+/* responsive */
+
+.header-memu_item .icon {
+  display: none;
+}
+
+
+
