--- a/responsive.css
+++ b/responsive.css
@@ -41,6 +41,9 @@
   .section-two{
     padding-top: 20px;
   }
+  .section-three-slide img{
+    max-width: 100%;
+  }
   .overlay{
     font-size: 14px;
   }
@@ -86,12 +89,21 @@
   .news-main_item_title {
     margin-top: 14%;
   }
+  .news-links {
+    position: relative;
+  }
   .news-links ul li a {
     color: #000;
-    line-height: 1.5;
+    line-height: 1.4;
     font-weight: bold;
     font-size: 16px;
   }
+  .news-links_more{
+    position: absolute;
+    bottom: 2%;
+    right: 2%;
+  }
+  
   .admissions-title_item::after,
   .admissions-title_item::before {
     content: "";
@@ -111,6 +123,18 @@
     line-height: 1.2;
     font-size: 18px;
     color: #000;
+  }
+  .admissions-content_main_content p{
+    display: -webkit-box;
+    -webkit-line-clamp: 5;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+  }
+  .admissions-content_sub_item_title a{
+    display: -webkit-box;
+    -webkit-line-clamp: 4;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
     
   }
   .library-image_content{
@@ -135,6 +159,19 @@
   .library-image_content_item_img{
     max-width: 100%;
   }
+  .library-image_content_item_title a {
+    color: #000;
+    padding: 0;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+  }
+  .library-image_content_item {
+    max-width: 350px;
+    height: 100px;
+    position: relative;
+  }
 
   .library-image_content_item_title a h3{
     color: #000;
@@ -142,7 +179,7 @@
   }
   .library-image_content_item_date {
     position: absolute;
-    right: 45%;
+    right: 38%;
     bottom: 10%;
     color: blue;
     font-style: italic;
